Fix first section alignment
Change horizontal alignment to center and remove margins from header

--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ a,
 
 .first-section {
     flex-direction: column;
-    align-items: space-between;
+    align-items: center;
+    flex: auto;
 }
 
 .header {
@@ -34,8 +35,7 @@ a,
     align-items: center;
     padding: 16px;
     width: 1000px;
-    margin: 0 -36px 0 36px;
-    flex: 1 1 auto;
+    flex: auto;
 }
 
 .header-logo {
@@ -50,7 +50,7 @@ a,
     padding: 48px;
     gap: 48px;
     width: 1000px;
-    flex: 1 1 auto;
+    flex: auto;
 }
 
 .presentation-text {
